--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,16 @@
+:root {
+	--main-color: #222222;
+	--light-color: #e0e5ea;
+	--done-color: #393939;
+	--border-color: rgba(122, 116, 116, 0.125);
+}
 html,
 body {
 	min-height: 100vh;
 }
-
 body {
-	background-color: #222222;
-	color: #fff;
+	background-color: var(--main-color);
+	color: var(--light-color);
 	padding-top: 30px;
 	display: flex;
 	flex-direction: column;
@@ -35,7 +40,7 @@ body {
 }
 .task-title--done {
 	text-decoration: line-through;
-	color: #393939;
+	color: var(--done-color);
 }
 .task-item__buttons {
 	display: flex;
@@ -63,28 +68,23 @@ body {
 	font-size: 32px;
 }
 .card {
-	border: 1px solid rgba(122, 116, 116, 0.125);
-	border-radius: 10px;
+	border: 1px solid var(--border-color);
+	border-radius: 5px;
 	background: transparent;
 }
 .card-header {
-	border-bottom: 1px solid rgba(122, 116, 116, 0.125);
+	border: 0.5px solid var(--border-color);
 }
-#tasksList {
-	border: 1px solid #1f1f1f;
+/* #tasksList {
+	border: 0.5px solid var(--border-color);
 	border-radius: 30px;
-}
+} */
 .list-group-item {
 	background: rgba(0, 0, 0, 0.75);
-	/* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
-	/* backdrop-filter: blur(11px); */
-	/* -webkit-backdrop-filter: blur(11px); */
-	border-radius: 10px;
-	border: 0px solid rgba(255, 255, 255, 0.18);
 	margin-bottom: 1px;
 }
 .btn-action {
-	background-color: #e0e5ea;
+	background-color: var(--light-color);
 	padding: 8px 10px;
 	cursor: pointer;
 	border: 0;
@@ -96,27 +96,16 @@ body {
 	justify-content: center;
 	align-items: center;
 }
-
 .btn-action:hover {
-	background-color: #e0e5ea;
+	background-color: var(--light-color);
 	opacity: 1;
 }
-
 .btn-action img {
 	pointer-events: none;
 }
-
 .none {
 	display: none !important;
 }
-
 .float-right {
 	float: right;
-}
-.copyright {
-	margin-top: 40px;
-	font-size: 14px;
-	color: gray;
-	text-align: center;
-	margin-bottom: 30px;
 }
