--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 :root {
 	--main-color: #222222;
 	--light-color: #e0e5ea;
+	--grey-color: #7d91a2;
 	--done-color: #393939;
 	--border-color: rgba(122, 116, 116, 0.125);
 }
@@ -73,12 +74,9 @@ body {
 	background: transparent;
 }
 .card-header {
-	border: 0.5px solid var(--border-color);
+	color: var(--grey-color);
+	border-bottom: 0.5px solid var(--border-color);
 }
-/* #tasksList {
-	border: 0.5px solid var(--border-color);
-	border-radius: 30px;
-} */
 .list-group-item {
 	background: rgba(0, 0, 0, 0.75);
 	margin-bottom: 1px;
